# algorithms

./: .gitignore  LICENSE  README.md
items/combinatoric/: README.md
items/encoding/bmp-decoding/: README.md  pyproject.toml
items/encoding/bmp-decoding/src/: main.py
items/encoding/bmp-decoding/src/core/: bmp.py
items/encoding/bmp-decoding/src/core/utils/: __init__.py  kaitaibmp.py
items/encoding/bmp-decoding/src/views/: bitplane_menu.py  bmpload.py  color_menu.py  file_headers.py  main_menu.py
items/encoding/bmp-decoding/src/views/css/: main_menu.tcss
items/encoding/compression/algorithms/lz77-interval/: README.md  pyproject.toml
items/encoding/compression/algorithms/lz77-interval/src/: main.py
items/encoding/ecc/: README.md  pyproject.toml
items/encoding/ecc/cyclic-bch/: README.md
items/encoding/ecc/cyclic-bch/src/core/: bch.py  utils.py
items/encoding/ecc/hamming/: README.md  pyproject.toml
items/encoding/ecc/hamming/src/: main.py
items/encoding/ecc/hamming/src/core/: hamming.py
items/encoding/ecc/src/: main.py
items/encoding/ecc/src/core/: cyclic.py
items/matrix/matrixmult/: README.md  pyproject.toml
items/matrix/matrixmult/src/: config.ini  main.py
items/matrix/matrixmult/src/controllers/: main.py  matrix.py  result.py
items/matrix/matrixmult/src/models/: __init__.py  main.py  matrix.py  result.py  test.py
items/matrix/matrixmult/src/themes/: default.py  sakura.py
items/matrix/matrixmult/src/views/main/: __init__.py  static_ui.py
items/matrix/matrixmult/src/views/matrix/: __init__.py  static_ui.py
items/matrix/matrixmult/src/views/result/: __init__.py  static_ui.py
(+176 files in other folders)
