[tool.poetry]
name = "bmpdecoding"
version = "0.1.0"
description = ""
authors = ["JKearnsl <boyarshinovn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.40.0"
pillow = "^10.2.0"
kaitaistruct = "^0.10"

[tool.poetry.dev-dependencies]
aiohttp = "^3.9.2"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
